# nonebot-plugin-wife

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
nonebot_plugin_wife/: __init__.py
