[tool.poetry]
name = "nonebot-plugin-wife"
version = "0.0.1"
description = "每日随机二次元wife in NoneBot2"
authors = ["月ヶ瀬"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "nonebot_plugin_wife" },
]
homepage = "https://github.com/tkgs0/nonebot-plugin-wife"
repository = "https://github.com/tkgs0/nonebot-plugin-wife"
keywords = ["nonebot", "wife"]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.3.1"
nonebot-adapter-onebot = "^2.4.1"
nonebot-plugin-localstore = "^0.7.1"
ujson = ">=5.2.0"

[tool.poetry.dev-dependencies]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

